Add additional logging and improve it overall.